modified:   css/style.css 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <h2 class="section-title icons">Les plus populaires</h2>
 
             <article class="card">
-              <img src="images/hebergements/emile-guillemot.jpg" alt="" />
+              <img src="images/hebergements/emile-guillemot.jpg" alt="Chambre de l'Auberge La Canebière avec un lit simple superposé" />
               <div class="populaires-content">
                 <h3 class="card-title">
                   <a href="#">Auberge de la Canebière</a>
@@ -266,10 +266,10 @@
             </article>
 
             <article class="card">
-              <img src="images/hebergements/emile-guillemot.jpg" alt="" />
+              <img src="images/hebergements/aw-creative.jpg" alt="Chambres d’hôtes Au cœur de l’eau avec lit double et mezzanine" />
               <div class="populaires-content">
                 <h3 class="card-title">
-                  <a href="#">Auberge de la Canebière</a>
+                  <a href="#">Chambres d’hôtes Au cœur de l’eau</a>
                 </h3>
 
                 <p>Nuit à partir de 71<span class="euro">€</span></p>
@@ -290,13 +290,13 @@
             </article>
 
             <article class="card">
-              <img src="images/hebergements/emile-guillemot.jpg" alt="" />
+              <img src="images/hebergements/febrian-zakaria2.jpg" alt="Chambre de l'Hôtel Bleu et Blanc avec lit double" />
               <div class="populaires-content">
                 <h3 class="card-title">
-                  <a href="#">Auberge de la Canebière</a>
+                  <a href="#">Hôtel Bleu et Blanc</a>
                 </h3>
 
-                <p>Nuit à partir de 71<span class="euro">€</span></p>
+                <p>Nuit à partir de 68<span class="euro">€</span></p>
 
                 <div class="card-rating">
                   <i class="fa-xs fa-solid fa-star" aria-hidden="true"></i>
@@ -319,30 +319,30 @@
           <h2 class="section-title">Activités à Marseille</h2>
           <ul class="activities-cards">
             <li class="activities-card">
-              <img src="images/activites/reno-laithienne.jpg" />
+              <img src="images/activites/reno-laithienne.jpg" alt="Photographie du Vieux-Port"/>
               <h3>
                 <a href="#">Vieux-Port</a>
               </h3>
             </li>
 
             <li class="activities-card">
-              <img src="images/activites/reno-laithienne.jpg" />
+              <img src="images/activites/paul-hermann.jpg" alt="Photographie du Fort de Pomègues" />
               <h3>
-                <a href="#">Vieux-Port</a>
+                <a href="#">Fort de Pomègues</a>
               </h3>
             </li>
 
             <li class="activities-card">
-              <img src="images/activites/reno-laithienne.jpg" />
+              <img src="images/activites/kilyan-sockalingum.jpg" alt="Photographie du Parc national des Calanques" />
               <h3>
-                <a href="#">Vieux-Port</a>
+                <a href="#">Parc national des Calanques</a>
               </h3>
             </li>
 
             <li class="activities-card">
-              <img src="images/activites/reno-laithienne.jpg" />
+              <img src="images/activites/florian-wehde.jpg" alt="Photographie de Notre-Dame-de-la-Garde" />
               <h3>
-                <a href="#">Vieux-Port</a>
+                <a href="#">Notre-Dame-de-la-Garde</a>
               </h3>
             </li>
           </ul>
