--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <body>
     <div class="main-container">
       <header class="top-bar">
-        <a href="#"><img src="images/logo/Booki.png" height="19" alt="logo de Booki" /></a>
+        <a href="#"
+          ><img src="images/logo/Booki.png" height="19" alt="logo de Booki"
+        /></a>
 
         <nav>
           <ul>
@@ -53,7 +55,6 @@
                 placeholder="Ville, Pays"
                 value="Marseille, France"
               />
-              <!-- <input class="search-button" type="submit" value="Rechercher" /> -->
               <button
                 class="search-button icons"
                 type="submit"
@@ -242,7 +243,10 @@
             <h2 class="section-title icons">Les plus populaires</h2>
 
             <article class="card">
-              <img src="images/hebergements/emile-guillemot.jpg" alt="Chambre de l'Auberge La Canebière avec un lit simple superposé" />
+              <img
+                src="images/hebergements/emile-guillemot.jpg"
+                alt="Chambre de l'Auberge La Canebière avec un lit simple superposé"
+              />
               <div class="populaires-content">
                 <h3 class="card-title">
                   <a href="#">Auberge de la Canebière</a>
@@ -266,7 +270,10 @@
             </article>
 
             <article class="card">
-              <img src="images/hebergements/aw-creative.jpg" alt="Chambres d’hôtes Au cœur de l’eau avec lit double et mezzanine" />
+              <img
+                src="images/hebergements/aw-creative.jpg"
+                alt="Chambres d’hôtes Au cœur de l’eau avec lit double et mezzanine"
+              />
               <div class="populaires-content">
                 <h3 class="card-title">
                   <a href="#">Chambres d’hôtes Au cœur de l’eau</a>
@@ -290,7 +297,10 @@
             </article>
 
             <article class="card">
-              <img src="images/hebergements/febrian-zakaria2.jpg" alt="Chambre de l'Hôtel Bleu et Blanc avec lit double" />
+              <img
+                src="images/hebergements/febrian-zakaria2.jpg"
+                alt="Chambre de l'Hôtel Bleu et Blanc avec lit double"
+              />
               <div class="populaires-content">
                 <h3 class="card-title">
                   <a href="#">Hôtel Bleu et Blanc</a>
@@ -315,32 +325,48 @@
           </section>
         </div>
 
+        <!-- ----------------------------------------------------------------------- -->
+        <!--                               Activities                                -->
+        <!-- ----------------------------------------------------------------------- -->
+
         <section id="activities" class="activities">
           <h2 class="section-title">Activités à Marseille</h2>
           <ul class="activities-cards">
             <li class="activities-card">
-              <img src="images/activites/reno-laithienne.jpg" alt="Photographie du Vieux-Port"/>
+              <img
+                src="images/activites/reno-laithienne.jpg"
+                alt="Photographie du Vieux-Port"
+              />
               <h3>
                 <a href="#">Vieux-Port</a>
               </h3>
             </li>
 
             <li class="activities-card">
-              <img src="images/activites/paul-hermann.jpg" alt="Photographie du Fort de Pomègues" />
+              <img
+                src="images/activites/paul-hermann.jpg"
+                alt="Photographie du Fort de Pomègues"
+              />
               <h3>
                 <a href="#">Fort de Pomègues</a>
               </h3>
             </li>
 
             <li class="activities-card">
-              <img src="images/activites/kilyan-sockalingum.jpg" alt="Photographie du Parc national des Calanques" />
+              <img
+                src="images/activites/kilyan-sockalingum.jpg"
+                alt="Photographie du Parc national des Calanques"
+              />
               <h3>
                 <a href="#">Parc national des Calanques</a>
               </h3>
             </li>
 
             <li class="activities-card">
-              <img src="images/activites/florian-wehde.jpg" alt="Photographie de Notre-Dame-de-la-Garde" />
+              <img
+                src="images/activites/florian-wehde.jpg"
+                alt="Photographie de Notre-Dame-de-la-Garde"
+              />
               <h3>
                 <a href="#">Notre-Dame-de-la-Garde</a>
               </h3>
@@ -349,27 +375,29 @@
         </section>
       </main>
 
-      <!-- Footer -->
+      <!-- ----------------------------------------------------------------------- -->
+      <!--                                 Footer                                  -->
+      <!-- ----------------------------------------------------------------------- -->
       <footer>
         <nav>
           <ul>
             <li>
-               <h3>À propos</h3>
-               <ul>
-                 <li><a href="#">Fonctionnement du site</a></li>
-                 <li><a href="#">Conditions générales</a></li>
-                 <li><a href="#">Données de confidentialité</a></li>
+              <h3>À propos</h3>
+              <ul>
+                <li><a href="#">Fonctionnement du site</a></li>
+                <li><a href="#">Conditions générales</a></li>
+                <li><a href="#">Données de confidentialité</a></li>
               </ul>
             </li>
-      
+
             <li>
-               <h3>Nos hébergements</h3>
-               <ul>
-                  <li><a href="#">Charte qualité</a></li>
-                  <li><a href="#">Proposer votre hôtel</a></li>
-               </ul>
+              <h3>Nos hébergements</h3>
+              <ul>
+                <li><a href="#">Charte qualité</a></li>
+                <li><a href="#">Proposer votre hôtel</a></li>
+              </ul>
             </li>
-      
+
             <li>
               <h3>Assistance</h3>
               <ul>
